--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<version>0.2-SNAPSHOT</version>
 
 
+
+    <parent>
+        <groupId>com.rincaro</groupId>
+        <artifactId>rincaro-parent</artifactId>
+        <version>TRUNK-SNAPSHOT</version>
+
+    </parent>
+    
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -21,42 +29,12 @@
 	</scm>
 
 
-	<repositories>
-		<repository>
-			<id>conjars.org</id>
-			<name>Conjars</name>
-			<url>http://conjars.org/repo</url>
-		</repository>
-		<repository>
-			<id>cdh.repo</id>
-			<name>Cloudera</name>
-			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-		</repository>
-		<repository>
-			<id>liveramp-repositories</id>
-			<name>Liveramp Repositories</name>
-			<url>http://repository.liveramp.com/artifactory/liveramp-repositories</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-releases</id>
-			<url>http://oss.sonatype.org/content/repositories/releases</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>clojars.org</id>
-			<url>http://clojars.org/repo</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 
 	<dependencies>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>14.0.1</version>
 		</dependency>
 
 		<dependency>
@@ -69,120 +47,86 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-			<version>1.0.3</version>
-			<scope>provided</scope>
+
 		</dependency>
 
 		<dependency>
 			<groupId>cascading</groupId>
 			<artifactId>cascading-core</artifactId>
-			<version>2.2.0-wip-45</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>cascading</groupId>
 			<artifactId>cascading-hadoop</artifactId>
-			<version>2.2.0-wip-45</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.3</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>2.5</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>com.twitter</groupId>
 			<artifactId>maple</artifactId>
-			<version>0.2.4</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.4</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.5.6</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.6</version>
+
 		</dependency>
 
 	</dependencies>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>repository.liveramp.com</id>
-			<name>repository.liveramp.com-snapshots</name>
-			<url>http://repository.liveramp.com/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-		<repository>
-			<id>repository.liveramp.com</id>
-			<name>repository.liveramp.com-releases</name>
-			<url>http://repository.liveramp.com/artifactory/libs-release-local</url>
-		</repository>
-	</distributionManagement>
 
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
+
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4</version>
+
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.4</version>
+
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
-				<configuration>
-					<redirectTestOutputToFile>true</redirectTestOutputToFile>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
 			</plugin>
 
 
@@ -190,7 +134,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
+
 				<configuration>
 					<archive>
 						<manifest>
